<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_time_hold_text"
        android:id="@+id/waiting_time_hold_text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_time_number"
        android:id="@+id/waiting_time_number"
        android:layout_below="@+id/waiting_time_hold_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:textSize="@dimen/h1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_time_minutes"
        android:id="@+id/waiting_time_minutes"
        android:layout_below="@+id/waiting_time_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_reservation_hold_text"
        android:id="@+id/make_reservation_hold_text"
        android:layout_below="@+id/waiting_time_minutes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_yes"
        android:id="@+id/button_yes"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />
</RelativeLayout>